--- a/vercel.json
+++ b/vercel.json
@@ -1,13 +1,7 @@
 {
   "functions": {
     "api/chat.ts": {
-      "runtime": "@vercel/node"
+      "runtime": "nodejs20.x"
     }
-  },
-  "rewrites": [
-    {
-      "source": "/api/(.*)",
-      "destination": "/api/$1"
-    }
-  ]
+  }
 }
