--- a/package.json
+++ b/package.json
@@ -6,7 +6,9 @@
   "scripts": {
     "dev": "vite",
     "build": "vite build",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "prepare": "husky",
+    "generate-spec": "node scripts/generate-system-spec.js"
   },
   "dependencies": {
     "@google/generative-ai": "^0.21.0",
@@ -17,6 +19,7 @@
   },
   "devDependencies": {
     "@types/node": "^22.14.0",
+    "husky": "^9.1.7",
     "typescript": "~5.8.2",
     "vite": "^6.2.0"
   }
