--- a/package.json
+++ b/package.json
@@ -13,13 +13,16 @@
   "dependencies": {
     "@google/generative-ai": "^0.21.0",
     "@vercel/node": "^5.3.21",
+    "lucide-react": "^0.542.0",
     "openai": "^5.19.1",
     "react": "^19.1.1",
     "react-dom": "^19.1.1"
   },
   "devDependencies": {
     "@types/node": "^22.14.0",
+    "dotenv": "^17.2.2",
     "husky": "^9.1.7",
+    "tsx": "^4.20.5",
     "typescript": "~5.8.2",
     "vite": "^6.2.0"
   }
