--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
   "dependencies": {
     "@google/generative-ai": "^0.21.0",
     "@vercel/node": "^5.3.21",
-    "lucide-react": "^0.542.0",
+    "lucide-react": "0.542.0",
     "openai": "^5.19.1",
     "react": "^19.1.1",
     "react-dom": "^19.1.1"
