--- a/.github/workflows/generate-system-spec.yml
+++ b/.github/workflows/generate-system-spec.yml
@@ -43,7 +43,7 @@ jobs:
         run: |
           git config --global user.name "github-actions[bot]"
           git config --global user.email "github-actions[bot]@users.noreply.github.com"
-          git add docs/system-specs/
+          git add -f docs/system-specs/
           if git diff --staged --quiet; then
             echo "has_changes=false" >> $GITHUB_OUTPUT
           else
