chore: テストファイルを.gitignoreに追加
- test/ディレクトリ全体を除外
- *.test.js, *.test.ts, *.spec.js, *.spec.ts を除外
- test-*.json, test-*.html パターンも除外

--- a/.gitignore
+++ b/.gitignore
@@ -39,3 +39,12 @@ secrets/
 
 # System specifications (auto-generated)
 docs/system-specs/
+
+# Test files
+test/
+*.test.js
+*.test.ts
+*.spec.js
+*.spec.ts
+test-*.json
+test-*.html
